# SketchFetch

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  PROGRAMMING.md  README.md  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  Terminal.cpp
include/SketchFetch/: SketchFetch.h  SketchFetch.hpp
include/SketchFetch/detail/: Authentication.h  Authentication.hpp  Connection.h  Connection.hpp  Download.hpp  Exception.hpp  ModelSearch.h  ModelSearch.hpp  SketchFabAPI.hpp  Util.h  Util.hpp
src/: Authentication.cpp  Connection.cpp  ModelSearch.cpp  SketchFetch.cpp
test/: CMakeLists.txt
test/source/: SketchFetch_test.cpp
